# ecs

./: .gitignore  CMakeLists.txt  readme.md
src/: colour.hpp  ecs.hpp  framerate.hpp  game.hpp  main.cpp  timer.hpp
